Fixed all findbugs' bugs, but the ones related to false positives (equals methods) and huge strings in interfaces (legacy templates). closes #181